# chess_engine

./: .gitignore  README.md
chess_engine/: .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  main.cpp
chess_engine/board/: board.cpp  board.h
chess_engine/piece/: .king.cpp.swp  .piece.cpp.swp  .piece.h.swp  CMakeLists.txt  aliance.hpp  king.cpp  king.h  knight.cpp  piece.cpp  piece.h  queen.cpp  queen.h
src/: CMakeLists.txt  main.cpp
src/Tests/: CMakeLists.txt  unit_tests.cpp  unit_tests.h
src/board/: CMakeLists.txt  board.cpp  board.h  game_info.cpp  game_info.h
src/piece/: CMakeLists.txt  bishop.cpp  bishop.h  coordinates.cpp  coordinates.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  piece_factory.cpp  piece_factory.h  piece_type.hpp  queen.cpp  queen.h  rook.cpp  rook.h
